@@ -2,13 +2,16 @@ package com.example.controller;
 
 import com.example.model.*;
 import com.example.util.SaveManager;
+
 import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 public class GameController {
 
-    private Scenario scenario;
+    private final Scenario scenario;
     private GameState gameState;
 
     public GameController(Scenario scenario, Personnage joueur) {
@@ -24,23 +27,25 @@ public class GameController {
     }
 
     public void reset() {
-        if (this.gameState != null) {
+        if (this.gameState != null && this.scenario != null) {
             this.gameState.setChapitreActuel(scenario.getChapitreInitial().getId());
         }
     }
 
     public Chapitre getChapitreCourant() {
+        if (gameState == null) return null;
         return scenario.getChapitre(gameState.getChapitreActuel());
     }
 
     public Personnage getJoueur() {
+        if (gameState == null) return null;
         return gameState.getJoueur();
     }
 
     public List<Choix> getChoixDisponibles() {
         Chapitre chapitreCourant = getChapitreCourant();
         if (chapitreCourant == null || chapitreCourant.getChoix() == null) {
-            return List.of();
+            return Collections.emptyList();
         }
         return chapitreCourant.getChoix().stream()
                 .filter(this::checkConditions)
@@ -48,13 +53,60 @@ public class GameController {
     }
 
     public void choisir(Choix choix) {
+        appliquerEffets(getChapitreCourant());
         gameState.setChapitreActuel(choix.getDestination());
     }
-    
+
     private boolean checkConditions(Choix choix) {
-        // La logique de vérification des conditions (compétences, objets) irait ici
+        if (choix.getConditions() == null || choix.getConditions().isEmpty()) {
+            return true;
+        }
+        Personnage joueur = getJoueur();
+        for (Condition condition : choix.getConditions()) {
+            String type = condition.getType().toUpperCase();
+            String valeur = condition.getValeur();
+            switch (type) {
+                case "COMPETENCE":
+                    if (!joueur.hasCompetence(valeur)) return false;
+                    break;
+                case "OBJET":
+                    if (!joueur.hasObjet(valeur)) return false;
+                    break;
+                case "MOTDEPASSE":
+                    if (!joueur.getMotsDePasse().contains(valeur)) return false;
+                    break;
+                default:
+                    return false;
+            }
+        }
         return true;
     }
+
+    @SuppressWarnings("unchecked")
+    private void appliquerEffets(Chapitre chapitre) {
+        if (chapitre.getEffets() == null || chapitre.getEffets().isEmpty()) return;
+
+        Personnage joueur = getJoueur();
+        Map<String, Object> effets = chapitre.getEffets();
+
+        if (effets.containsKey("points_de_vie")) {
+            joueur.modifierPointsDeVie((Integer) effets.get("points_de_vie"));
+        }
+        if (effets.containsKey("or")) {
+            joueur.setDoublonsOr(joueur.getDoublonsOr() + (Integer) effets.get("or"));
+        }
+        if (effets.containsKey("inventaire")) {
+            List<String> items = (List<String>) effets.get("inventaire");
+            for (String item : items) {
+                joueur.ajouterObjet(new Objet(item, "Inconnu"));
+            }
+        }
+        if (effets.containsKey("mots_de_passe")) {
+            List<String> passwords = (List<String>) effets.get("mots_de_passe");
+            joueur.getMotsDePasse().addAll(passwords);
+        }
+    }
+
 
     private String getNomFichierSauvegarde() {
         String nomHeros = getJoueur().getNom();
@@ -62,9 +114,6 @@ public class GameController {
         return "sauvegarde_" + nomFichierValide + ".json";
     }
 
-    /**
-     * Sauvegarde la partie en utilisant le nom du héros actuel.
-     */
     public void sauvegarderPartie() {
         String nomFichier = getNomFichierSauvegarde();
         try {
